objects/Driver__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basic_Pay__c</fullName>
        <label>Basic Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount__c</fullName>
        <label>Bonus Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Reason__c</fullName>
        <label>Bonus Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deduction_Amount__c</fullName>
        <label>Deduction Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deduction_Reason__c</fullName>
        <label>Deduction Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Driver_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_First_Name__c</fullName>
        <label>Driver First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Last_Name__c</fullName>
        <label>Driver Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driving_License_Number__c</fullName>
        <label>Driving License Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trips__c</fullName>
        <label>Number of Trips</label>
        <summaryForeignKey>Booking__c.Driver__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <formula>(Experience__c*100)+(Number_of_Trips__c *30)+ Basic_Pay__c + Bonus_Amount__c - Deduction_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Driver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Driver Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Simpsons_VL01driverAgeCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Age__c &gt; 18 || Age__c &lt;50</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Driver&apos;s age should be between 18 and 50 years</errorMessage>
    </validationRules>
</CustomObject>